--- a/Android/Lead/app/src/main/res/layout/fragment_profile.xml
+++ b/Android/Lead/app/src/main/res/layout/fragment_profile.xml
@@ -14,7 +14,7 @@
             android:id="@+id/topArea"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="16dp"
+            android:paddingTop="24dp"
             android:paddingBottom="24dp"
             android:background="@color/background_lighter_grey">
 
@@ -51,6 +51,16 @@
 
             </LinearLayout>
 
+            <ImageView
+                android:id="@+id/image_camera"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginRight="16dp"
+                android:src="@mipmap/ic_camera"/>
+
+
         </RelativeLayout>
 
         <LinearLayout
@@ -61,20 +71,29 @@
             android:orientation="vertical"
             style="@style/profileRowLayout">
 
+            <TextView
+                android:id="@+id/text_profile_notice_for_facebook_user"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
+                android:text="@string/profile_side_note"/>
+
             <!-- =========== Name =========== -->
             <TableLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:stretchColumns="1"
+                android:shrinkColumns="1"
                 android:paddingTop="8dp"
                 android:paddingBottom="8dp">
 
                 <TableRow>
 
                     <ImageView
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:layout_marginRight="24dp"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_marginRight="32dp"
                         android:src="@mipmap/ic_profile"/>
 
                     <LinearLayout
@@ -119,15 +138,16 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:stretchColumns="1"
+                android:shrinkColumns="1"
                 android:paddingTop="8dp"
                 android:paddingBottom="8dp">
 
                 <TableRow>
 
                     <ImageView
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:layout_marginRight="24dp"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_marginRight="32dp"
                         android:src="@mipmap/ic_email"/>
 
                     <EditText
@@ -137,6 +157,7 @@
                         android:hint="Email"
                         android:nextFocusUp="@+id/editTextLastName"
                         android:nextFocusDown="@+id/editTextContact"
+                        android:inputType="textEmailAddress"
                         style="@style/profileEditTextStyle"/>
                 </TableRow>
             </TableLayout>
@@ -146,15 +167,16 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:stretchColumns="1"
+                android:shrinkColumns="1"
                 android:paddingTop="8dp"
                 android:paddingBottom="8dp">
 
                 <TableRow>
 
                     <ImageView
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:layout_marginRight="24dp"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_marginRight="32dp"
                         android:src="@mipmap/ic_contact"/>
 
                     <EditText
@@ -164,6 +186,7 @@
                         android:hint="Contact"
                         android:nextFocusUp="@+id/editTextEmail"
                         android:nextFocusDown="@+id/textBirthday"
+                        android:inputType="phone"
                         style="@style/profileEditTextStyle"/>
                 </TableRow>
             </TableLayout>
@@ -173,15 +196,16 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:stretchColumns="1"
+                android:shrinkColumns="1"
                 android:paddingTop="8dp"
                 android:paddingBottom="8dp">
 
                 <TableRow>
 
                     <ImageView
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:layout_marginRight="24dp"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_marginRight="32dp"
                         android:src="@mipmap/ic_calendar"/>
 
                     <TextView
@@ -203,15 +227,16 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:stretchColumns="1"
+                android:shrinkColumns="1"
                 android:paddingTop="8dp"
                 android:paddingBottom="8dp">
 
                 <TableRow>
 
                     <ImageView
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:layout_marginRight="24dp"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_marginRight="32dp"
                         android:src="@mipmap/ic_address"/>
 
                     <LinearLayout
@@ -243,9 +268,6 @@
 
                 </TableRow>
             </TableLayout>
-
-
-
 
 
 
