--- a/Android/Lead/app/src/main/res/menu/menu_overflow_dialog_journal_edit.xml
+++ b/Android/Lead/app/src/main/res/menu/menu_overflow_dialog_journal_edit.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <!--
     <item
         android:id="@+id/dialog_overflow_edit_journal_edit"
-        android:title="@string/dialog_overflow_menu_edit" />
+        android:name="@string/dialog_overflow_menu_edit" />
+    -->
 
     <item
         android:id="@+id/dialog_overflow_edit_journal_delete"
-        android:title="@string/dialog_overflow_menu_delete" />
+        android:title="@string/dialog_overflow_menu_delete"
+        android:name="@string/dialog_overflow_menu_delete" />
     <!-- android:icon="@drawable/icon_lock" -->
 </menu>
