--- a/Android/Lead/app/src/main/res/menu/menu_picture.xml
+++ b/Android/Lead/app/src/main/res/menu/menu_picture.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.orbital.lead.controller.Activity.PictureActivity">
 
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
+    <item android:id="@+id/action_settings"
+        android:title="@string/action_settings"
+        android:name="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
 
 </menu>
