--- a/Android/Lead/app/src/main/res/menu/menu_profile.xml
+++ b/Android/Lead/app/src/main/res/menu/menu_profile.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.orbital.lead.controller.Activity.ProfileActivity">
 
-    <item android:id="@+id/action_done" android:title="@string/action_done"
+    <item android:id="@+id/action_done"
+        android:title="@string/action_done"
+        android:name="@string/action_done"
         android:icon="@drawable/ic_done"
         android:orderInCategory="100" app:showAsAction="always" />
 
