--- a/Android/Lead/app/src/main/res/values/styles.xml
+++ b/Android/Lead/app/src/main/res/values/styles.xml
@@ -292,7 +292,7 @@
         <item name="android:layout_marginTop">16dp</item>
         <item name="android:layout_marginLeft">16dp</item>
         <item name="android:layout_marginRight">16dp</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">18dp</item>
         <item name="android:textColor">@color/primary_text</item>
     </style>
 
